# PISMA-Literature-Review-Pipeline-Automation-Toool

./: .gitignore  CLI_REFERENCE.md  CONFIGURATION_REFERENCE.md  GUI_GUIDE.md  HANDBOOK.md  README.md  ROADMAP.md  benchmark_report.py  config.py  coverage_report.py  database.py  main.py  pyproject.toml  requirements-local-llm.txt  requirements.txt
.github/workflows/: quality.yml
acquisition/: __init__.py  manual_paper_ingestor.py  pdf_fetcher.py
analysis/: __init__.py  ai_screener.py  llm_clients.py  relevance_scoring.py  topic_prefilter.py
citation/: __init__.py  citation_expander.py
configs/: benchmark_baselines.json
discovery/: __init__.py  arxiv_client.py  core_client.py  crossref_client.py  europe_pmc_client.py  fixture_client.py  google_scholar_client.py  manual_import_client.py  openalex_client.py  protocols.py  pubmed_client.py  semantic_scholar_client.py  springer_client.py
models/: __init__.py  paper.py
pipeline/: pipeline_controller.py
reporting/: report_generator.py
tests/: __init__.py  test_ai_screener.py  test_benchmark_report.py  test_citation_expander.py  test_config.py  test_coverage_report.py  test_database.py  test_deduplication.py  test_desktop_app.py  test_desktop_app_high_coverage.py  test_desktop_app_workflows.py  test_discovery_clients_extended.py  test_documentation_audit.py  test_feature_branch_coverage.py  test_google_scholar_client.py  test_http_utils.py  test_import_and_fixture_clients.py  test_launcher.py  test_llm_clients.py  test_logging_utils.py  test_main.py  test_manual_paper_ingestor.py  test_misc_high_coverage.py  test_pdf_and_extraction.py  test_pipeline_controller_helpers.py  test_pipeline_integration.py  test_provider_contracts.py  test_relevance_scoring.py  test_springer_client_extended.py  test_text_processing.py  test_topic_prefilter.py  test_ui_view_model.py
tests/fixtures/: google_scholar_import.json  offline_config.json  offline_papers.json
ui/: __init__.py  desktop_app.py  launcher.py  view_model.py
utils/: __init__.py  deduplication.py  http.py  logging_utils.py  text_processing.py
